--- a/social service testing/welcome.html
+++ b/social service testing/welcome.html
@@ -79,7 +79,7 @@
                     <p class="copyright">No Copyright Infringement Intended.</p>
                 <div class="kst">
                     <ul>
-                        <li><a href="#">K</a></li>
+                        <li><a href="https://ksavit.netlify.app/">K</a></li>
                         <li><a href="#">S</a></li>
                         <li><a href="#">T</a></li>
                     </ul>
