--- a/Kushal Edited Home/index.html
+++ b/Kushal Edited Home/index.html
@@ -33,6 +33,9 @@
             </div>
         </div>
     </nav>
+        
+         <!--Home section starts-->
+    <div class="home-container" ></div>
 
     
 
